feat: add facebook login & dotenv

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URI=mongodb+srv://alpha:camp@cluster0.ldua2lu.mongodb.net/restaurant-list?retryWrites=true&w=majority
+FACEBOOK_ID=1400698997353485
+FACEBOOK_SECRET=9c199e945d49330db2c86631b76717fb
+FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
+SESSION_SECRET=ThisIsMySecretKey
